--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'io.qameta.allure' version '2.11.2'
     //  id "io.freefair.lombok" version "8.2.2"
 }
 
@@ -9,6 +10,13 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 11
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
+
+allure{
+    version = '2.20.1'
+    useJUnit5{
+        version = '2.20.1'
+    }
+}
 
 repositories {
     mavenCentral()
@@ -20,6 +28,7 @@ dependencies {
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testCompileOnly 'org.projectlombok:lombok:1.18.24'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
+    testImplementation 'io.qameta.allure:allure-selenide:2.20.1'
     // testRuntimeOnly 'org.slf4j:slf4j-simple;2.0.3'
 }
 
